--- a/.github/workflows/issue-to-pr.yml
+++ b/.github/workflows/issue-to-pr.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         node-version: '20'
 
-    - name: Install octokit
+    - name: Install dependencies
       run: npm install @octokit/rest
 
     - name: Convert Issue to Pull Request
