--- a/.github/workflows/issue-to-pr.yml
+++ b/.github/workflows/issue-to-pr.yml
@@ -23,4 +23,4 @@ jobs:
     - name: Convert Issue to Pull Request
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: node .github/scripts/convertIssueToPR.js
+      run: node .github/scripts/convertIssueToPR.mjs
