--- a/.github/workflows/issue-to-pr.yml
+++ b/.github/workflows/issue-to-pr.yml
@@ -18,7 +18,10 @@ jobs:
         node-version: '20'
 
     - name: Install dependencies
-      run: npm install @octokit/rest @actions/github
+      run: npm install @octokit/rest @actions/github uuid
+
+    - name: Print script contents
+      run: cat .github/scripts/convertIssueToPR.mjs
 
     - name: Convert Issue to Pull Request
       env:
