--- a/.github/workflows/closeIssueAndHandlePR.yml
+++ b/.github/workflows/closeIssueAndHandlePR.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: '20'
 
       - name: Install dependencies
-        run: npm install @octokit/rest uuid
+        run: npm install @octokit/rest @actions/github uuid
 
       - name: Handle Closed Issue
         env:
