--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+**/package-lock.json
 
 # Logs and temp files
 logs/
@@ -36,7 +37,3 @@ _config_secrets.yml
 # IDEs and editors
 .vscode/
 .idea/
-
-/pages/services/node_modules
-pages/services/package-lock.json
-pages/services/package.json
