--- a/.github/workflows/manual-fetch-structure.yml
+++ b/.github/workflows/manual-fetch-structure.yml
@@ -24,3 +24,14 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         GITHUB_REPOSITORY: ${{ github.repository }}
+
+    - name: Commit and push structure.json
+      run: |
+        git config --global user.email "github-actions[bot]@users.noreply.github.com"
+        git config --global user.name "github-actions[bot]"
+        git add -f structure.json  # Force-add structure.json
+        git commit -m "Update structure.json"
+        git push
+      env:
+        GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+        GITHUB_REPOSITORY: ${{ github.repository }}
